# index_update

./: .gitignore  README.md  block.cpp  block.h  distancetable.cpp  distancetable.h  graph.cpp  graph.h  main.c  main.cpp  makefile
block_matching/: CMakeLists.txt  README.md  meson.build
block_matching/src/: dynamic_index.cpp  dynamic_index.hpp  global_parameters.hpp  index.cpp  lexicon.hpp  main.cpp  posting.cpp  static_index.cpp
block_matching/src/Structures/: documentstore.cpp
block_matching/src/doc_analyzer/: analyzer.h
block_matching/src/doc_analyzer/Matcher/: block.h  blockmatching.hpp  distancetable.cpp  distancetable.h  graph.cpp  matcher.cpp  matcher.h  stringencoder.cpp  stringencoder.h  translate.cpp  translate.h
block_matching/src/document_readers/: WETreader.hpp
block_matching/src/dumps/: redis_dump.cpp
block_matching/src/index/: dynamic_index.cpp  dynamic_index.hpp  index.cpp  index.hpp  lexicon.cpp  lexicon.hpp  posting.hpp  sparse_lexicon.cpp  sparse_lexicon.hpp  static_index.cpp
block_matching/src/index/query_processing/: DAAT.cpp  DAAT.hpp  query_primitive.cpp  query_primitive.hpp  query_primitive_low.cpp  query_primitive_low.hpp
block_matching/src/query_processing/: DAAT.cpp
block_matching/src/query_processing/ranking_functions/: BM25.cpp  BM25.hpp
block_matching/src/script_engine/: commands.cpp  commands.hpp  parse_engine.cpp  readme.md
block_matching/src/static_functions/: compression.hpp  postingIO.cpp
block_matching/src/static_functions/compression_functions/: varbyte.cpp  varbyte.hpp
block_matching/src/tests/: test_blockgraph.cpp
block_matching/src/utility/: morph.hpp  redis.cpp  redis.hpp  timer.cpp  util.cpp
block_matching/src_test/: test_lexicon.cpp  test_matcher.cpp  test_redis.cpp
doc_analyzer/: TODO.md  analyzer.cpp  (+15 more)
index/: README.md  compressor.cpp  compressor.hpp  extended_lexicon.cpp  extended_lexicon.hpp  global_parameters.hpp  index.cpp  index.hpp  indexwriter.cpp  indexwriter.hpp  lexicon.cpp  lexicon.hpp  main.cpp  makefile  meson.build  meta.cpp  meta.hpp  posting.hpp  redis.cpp  redis.hpp  sparse_lexicon.cpp  sparse_lexicon.hpp  static_index.cpp  static_index.hpp  util.cpp  util.hpp  util.tcc  varbyte.cpp  varbyte.hpp
index/Structures/: documentstore.cpp  documentstore.h  translationtable.cpp  translationtable.h
index/doc_analyzer/: analyzer.cpp  analyzer.h  externalpostings.h  main.cpp  makefile
index/doc_analyzer/Matcher/: block.cpp  block.h  distancetable.cpp  distancetable.h  graph.cpp  graph.h  matcher.cpp  matcher.h  stringencoder.cpp  stringencoder.h  translate.cpp  translate.h
index/doc_analyzer/Tests/: blocktester.cpp  blocktester.h
index/doc_analyzer/exe/: doc_analyzer
index/document_readers/: RAWreader.cpp  WETreader.cpp  WETreader.hpp  reader_interface.hpp
index/query_processing/: DAAT.cpp  DAAT.hpp  query_primitive.cpp  query_primitive.hpp  query_primitive_low.cpp  query_primitive_low.hpp  query_primitives.cpp  query_primitives.hpp
index/query_processing/ranking_functions/: BM25.cpp  BM25.hpp
index/script_engine/: parse_engine.cpp  parse_engine.hpp  readme.md
index/src/: global_parameters.hpp  index.cpp  index.hpp  lexicon.hpp  morph.cpp  morph.hpp  posting.hpp  sparse_lexicon.hpp  static_index.cpp  util.cpp  util.hpp
index/src/Structures/: documentstore.cpp  documentstore.h  translationtable.cpp  translationtable.h
index/src/doc_analyzer/: BUILD.md  analyzer.cpp  analyzer.h
index/src/doc_analyzer/Matcher/: block.cpp  block.h  blockmatching.cpp  blockmatching.hpp  cluster.cpp  cluster.hpp  distancetable.cpp  distancetable.h  graph.cpp  graph.h  matcher.cpp  matcher.h  stringencoder.cpp  stringencoder.h  translate.cpp  translate.h
index/src/document_readers/: RAWreader.cpp  RAWreader.hpp  WETreader.cpp
index/src/dumps/: redis_dump.cpp  redis_dump.hpp
index/src/query_processing/: DAAT.cpp  DAAT.hpp  query_primitive.cpp  query_primitive_low.cpp  query_primitive_low.hpp
index/src/script_engine/: commands.cpp  parse_engine.cpp
index/src/tests/: blocktest.cpp  test_blockgraph.cpp  test_matcher.cpp  test_stringencoder.cpp
index/static_functions/: bytesIO.cpp  bytesIO.hpp  compression.cpp  compression.hpp  postingIO.cpp  postingIO.hpp
index/static_functions/compression_functions/: varbyte.cpp  varbyte.hpp
landmarks/: CMakeLists.txt  directory.hpp  index.hpp  lexicon.cpp  lexicon.hpp  meson.build  stringencoder.cpp  stringencoder.h  update.cpp  update.hpp
landmarks/src/: global_parameters.hpp  index.cpp  index.hpp  lexicon.cpp  lexicon.hpp  main.cpp  posting.hpp
landmarks/src/doc_parsing/: diff.cpp  diff.hpp  docparser.cpp  docparser.hpp  externalposting.hpp  stringencoder.cpp  stringencoder.hpp  transform.cpp  transform.hpp
landmarks/src/index/: dynamic_index.cpp  dynamic_index.hpp  index.cpp  index.hpp  lexicon.hpp  posting.cpp  posting.hpp
landmarks/src/landmark/: landmark.hpp  landmarkarray.cpp  landmarkarray.hpp  landmarkdirectory.cpp  landmarkdirectory.hpp
landmarks/src/redis_interfaces/: documentstore.cpp  documentstore.hpp
landmarks/src/static_functions/: compression.cpp  postingIO.cpp
landmarks/src/tests/: testdriver.cpp  testdriver.hpp
landmarks/src/tests/doc_parsing/: difftest.cpp  difftest.hpp
landmarks/src/utility/: redis.cpp  timer.hpp  util.cpp
landmarks/src_test/: test_diff.cpp  test_main.cpp
winnowing/: CMakeLists.txt  README.MD  meson.build
winnowing/src/: global_constants.hpp  global_types.hpp  main.cpp
winnowing/src/doc_partitioner/: partitioner.cpp  partitioner.hpp
winnowing/src/document_readers/: WETreader.cpp
winnowing/src/index/: document_store.cpp  document_store.hpp  document_version_table.cpp  document_version_table.hpp  dynamic_index.cpp  dynamic_index.hpp  index.hpp  index_builder.cpp  index_builder.hpp  lexicon.cpp  lexicon.hpp  sparse_lexicon.cpp  sparse_lexicon.hpp  static_index.cpp  static_index.hpp
winnowing/src/static_functions/: bytesIO.tcc  postingIO.cpp  postingIO.hpp
winnowing/src/utility/: fs_util.cpp  fs_util.hpp  md5.h  morph.cpp  string_util.cpp  string_util.hpp  util.cpp  util.hpp
(+60 files in other folders)
